# MASArena

./: .env.example  .gitignore  .pre-commit-config.yaml  2025-3-26.md  404.html  CONTRIBUTING.md  LICENSE  README.md  aflow_humaneval.py  auto_workflow_test.py  autogen_autogen.py  index.html  main.py  mkdocs.yml  mock_mcp_config.json  model_providers.json  pyproject.toml  pytest.ini  requirements.txt  run_aflow_optimize.py  run_aflow_optimize.sh  run_benchmark.py  run_benchmark.sh  setup.py  sitemap.xml  swebench_mcp_config.json  test_agent_register.py
.github/workflows/: doc.yml  test.yml
aflow_optimize/: index.html
benchmark/: README.md  __init__.py  benchmark_runner.py  run_benchmark.py
benchmark/data/: aime_aime2025-i_test.jsonl  aime_aime2025-ii_test.jsonl  bbh_sample.py  bbh_test.jsonl  bgh_downloader.py  download_data.py  download_open_llm_leaderboard.py  download_swebench.py  download_vellum_ai_leaderboard.py  ifeval_test.jsonl  mmlu_pro_validation.jsonl  model_data.py  swebench_lite_dev.jsonl
benchmark/examples/: langgraph_integration.py  metrics_collection_example.py  metrics_usage_example.py  simple_benchmark_example.py  unified_evaluation_example.py
benchmark/mcp_servers/: calculator_server.py  environment_server.py  evaluator_server.py  filesystem_server.py  git_server.py  mock_math_server.py  mock_search_server.py  process_server.py  python_interpreter_server.py  web_search_server.py
benchmark/src/: common.py
data/: aime_test.jsonl  drop_test.jsonl  humaneval_test.jsonl  model_data.py  musique_test.jsonl
data/leaderboard/: llm_cost_CO2.json  (+2 more)
docs/: aflow_optimize.md  aflow_optimizer.md  extending.md  failure_attribution.md  index.md  roadmap.md  supported.md  system_overview.md
extending/: index.html
failure_attribution/: index.html
mas_arena/: __init__.py  benchmark_runner.py
meeting-notes/: Meeting-20250226.md  Meeting-20250312.md
multi-agents-benchmark/: supervisor_mas.py
roadmap/: index.html
scripts/: configs.md  run_mas_benchmark.sh  run_single_agent_benchmark.sh
search/: search_index.json
src/: adjustable_workflow.py  base_workflow.py  config_workflow.py  connection_manager.py  test_adjustable_workflow_rigorous.py  test_edge_weight_adaptation.py  test_workflow.py
supported/: index.html
system_overview/: index.html
tests/: conftest.py  test_agents.py  test_benchmark_runner.py  test_evaluators.py
(+253 files in other folders)
