[project]
name = "project-multi-agents-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-openai>=0.3.7",
    "langgraph-swarm>=0.0.2",
    "langgraph>=0.2.74",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "datasets>=3.3.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
extend-select = ["C4", "SIM"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
