[project]
name = "project-multi-agents-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-openai>=0.3.7",
    "langgraph-swarm>=0.0.2",
    "langgraph>=0.2.74",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "datasets>=3.3.2",
    "python-dotenv>=1.0.1",
    "openevals>=0.0.3",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "aiofiles>=24.1.0",
    "sympy>=1.13.3",
    "psutil>=7.0.0",
    "networkx>=3.4.2",
    "matplotlib>=3.10.1",
    "bs4>=0.0.2",
    "seaborn>=0.13.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
    "nltk>=3.9.1",
    "immutabledict>=4.2.1",
    "absl-py>=2.2.2",
    "langdetect>=1.0.9",
    "antlr4-python3-runtime>=4.13.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
extend-select = ["C4", "SIM"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
